Fix reserved notice overlap

--- a/assets/css/elements.css
+++ b/assets/css/elements.css
@@ -53,6 +53,7 @@
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%) rotate(-45deg);
+  z-index: 999;
 }
 
 .card-1 .card-title {
